<resources>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_filter_off">filter off</string>
    <string name="accessibility_filter_on">filter on</string>
    <string name="activityorientation_setting_title">ActivityOrientation</string>
    <string name="add_avatar_confirm">Save</string>
    <string name="add_avatar_content">Do you want to save the avatar?</string>
    <string name="ae_af_locked_hint">AF/AE LOCK</string>
    <string name="ae_locked_hint">AE LOCK</string>
    <string name="af_locked_hint">AF LOCK</string>
    <string name="ai_continuous_shot_not_supported">AI</string>
    <string name="ai_group_photo_tip">Smart group selfie</string>
    <string name="all_camera_damaged">Camera error, please re-enable it later or restart the phone to recover</string>
    <string name="all_camera_damaged_title">Camera not enabled</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animal_eye_setting_title">Animal Eye Autofocus</string>
    <string name="anti_video_setting_entries_off">Off</string>
    <string name="anti_video_setting_entries_on">On</string>
    <string name="anti_video_setting_on_tips">Ultra steady is on</string>
    <string name="anti_video_setting_summary">Anti Video funciton is on or off</string>
    <string name="anti_video_setting_title">Anti Video</string>
    <string name="aod_allow_permission_tips">Unfold to get permissions</string>
    <string name="aod_low_storage_tips">Insufficient storage. Unfold to free up space</string>
    <string name="aod_override_mode_screen_size">720x720</string>
    <string name="aod_swipe_down_exit_tip">Swipe down to exit</string>
    <string name="aod_thermal_throttle_warning_known">OK</string>
    <string name="aod_thermal_throttle_warning_tips">Temperature limit reached. Camera has exited automatically</string>
    <string name="app_name">SVGAPlayer</string>
    <string name="app_permissions">For normal use, this app should be allowed permission to %1$s.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apr">Apr</string>
    <string name="ar_aim_at_face">Aim at the face</string>
    <string name="ar_audio_cartoon">Anime</string>
    <string name="ar_audio_cartoon_changed">Video voice changed to Anime</string>
    <string name="ar_audio_echo">Echo</string>
    <string name="ar_audio_echo_changed">Video voice changed to Echo</string>
    <string name="ar_audio_female">Female</string>
    <string name="ar_audio_female_changed">Video voice changed to Female</string>
    <string name="ar_audio_male">Male</string>
    <string name="ar_audio_male_changed">Video voice changed to Male</string>
    <string name="ar_audio_monster">Monster</string>
    <string name="ar_audio_monster_changed">Video voice changed to Monster</string>
    <string name="ar_audio_original">Original</string>
    <string name="ar_audio_original_changed">Video voice changed to Original</string>
    <string name="ar_background_guide_recommend">Place your 3D avatar in a scene to take fun photos and videos with music</string>
    <string name="ar_background_guide_title">AR scene mode</string>
    <string name="ar_click_on_photo">Tap to take a photo</string>
    <string name="ar_drawline_mode_description">AR Line</string>
    <string name="ar_drawline_mode_title">Magic Line</string>
    <string name="ar_facemoji_guide">AR emoji mode</string>
    <string name="ar_long_press_video">Long-press to take a video</string>
    <string name="ar_scene_guide">AR scene mode</string>
    <string name="ar_shot_mode_title">AR Shot</string>
    <string name="ar_space_mode_title">AR Space</string>
    <string name="ar_storage_full">The default storage is full,please release some space or manage the storage options in settings</string>
    <string name="ar_tip_display_module">Tap surface to place your avatar</string>
    <string name="ar_tip_guide_recommend">Make something out of Vivid 3D avatars with customizable features</string>
    <string name="ar_tip_guide_start">Start AR shot</string>
    <string name="ar_tip_guide_title">AR shot</string>
    <string name="ar_tip_searching_plane">Finding surface...</string>
    <string name="arc_filter_mode_title">Filter</string>
    <string name="arc_ids_toast_pmk_down">Move down</string>
    <string name="arc_ids_toast_pmk_ok">Keep the arrow on the center line</string>
    <string name="arc_ids_toast_pmk_tap_shutter">"Press the shutter and slowly move
 tap to change direction"</string>
    <string name="arc_ids_toast_pmk_up">Move up</string>
    <string name="arc_ids_toast_wideselfie_rotaniton_left">Please continue slowly rotating your phone to the left</string>
    <string name="arc_ids_toast_wideselfie_rotaniton_right">Please continue slowly rotating your phone to the right</string>
    <string name="arc_ids_toast_wideselfie_tap_shutter">"Press the shutter and 
 slowly move"</string>
    <string name="arc_ids_warining_toast_pmk_trace_little_quick">Move slowly</string>
    <string name="arcore_mode_description">Shoot and enhance fun photos and videos with a variety of materials.</string>
    <string name="arcore_mode_title">AR Shot</string>
    <string name="arcore_save_it_locally">Save to local</string>
    <string name="arcore_share">Share</string>
    <string name="area_code" />
    <string name="asd_default_value">auto</string>
    <string name="asd_dynamic_beach">Beach</string>
    <string name="asd_dynamic_building">Building</string>
    <string name="asd_dynamic_firework">Firework</string>
    <string name="asd_dynamic_flower">Flower</string>
    <string name="asd_dynamic_food">Food</string>
    <string name="asd_dynamic_grass">Grass</string>
    <string name="asd_dynamic_hdr_portrait">HDR portrait</string>
    <string name="asd_dynamic_lakes">Lakes</string>
    <string name="asd_dynamic_landscape">Landscape</string>
    <string name="asd_dynamic_night">Night view</string>
    <string name="asd_dynamic_night_party">Night party</string>
    <string name="asd_dynamic_night_portrait">Night portrait</string>
    <string name="asd_dynamic_party">Party</string>
    <string name="asd_dynamic_pet">Pet</string>
    <string name="asd_dynamic_phone_store">Phone store</string>
    <string name="asd_dynamic_plant">Plant</string>
    <string name="asd_dynamic_portrait">Portrait</string>
    <string name="asd_dynamic_sky">Sky</string>
    <string name="asd_dynamic_snow">Snow</string>
    <string name="asd_dynamic_street_view">Street view</string>
    <string name="asd_dynamic_sunrise">Sunrise/Sunset</string>
    <string name="asd_dynamic_text">Text</string>
    <string name="asd_mode_title">@string/photo_mode_title</string>
    <string name="asd_result_algorithm_backlight">Backlight</string>
    <string name="asd_result_algorithm_hdr">HDR</string>
    <string name="asd_result_algorithm_lowlight_hdr">Low-Light HDR</string>
    <string name="asd_result_algorithm_night_scene">Night</string>
    <string name="asd_setting_entries_auto">auto</string>
    <string name="asd_setting_entries_off">0</string>
    <string name="asd_setting_entries_on">1</string>
    <string name="asd_setting_title">ASD Mode</string>
    <string name="asd_top_bar_setting_title">AI</string>
    <string name="attach_uri_permission_denied">"Permission denied,can't write in external storage"</string>
    <string name="audio">Microphone</string>
    <string name="aug">Aug</string>
    <string name="auto_scene_detection_mode_title">AI CAM</string>
    <string name="auto_watermark_setting_summary">Auto add watermark after image is captured</string>
    <string name="auto_watermark_setting_summary_tips" />
    <string name="delete_avatar_cancel">Cancel</string>
    <string name="gender_select_confirm">Confirm</string>
    <string name="gender_select_content">Basic models, features and clothing vary according to genders</string>
    <string name="gender_select_title">Choose gender</string>
    <string name="guide_asd_content1">Wide shot AI CAM auto-detects scenes and modifies settings for the best image quality.</string>
    <string name="guide_asd_content2">Scenes are auto-identified in real time.</string>
    <string name="guide_facebeauty_content1">Retouch features down to the smallest detail to enhance your charm.</string>
    <string name="guide_facebeauty_content2">You can tap the AI button for automatic adjustments for face, or manually control the effects.</string>
    <string name="guide_facebeauty_title">Face Retouching</string>
    <string name="guide_supernight_content1">Night mode vividly brings out every detail</string>
    <string name="guide_supernight_content2">Hold your phone steady until the capture completes</string>
    <string name="high_temperature_confirm">I know</string>
    <string name="high_temperature_sub_title">To prevent your phone from overheating, the app will automatically exit. Please wait until the device has been cooled before using the camera.</string>
    <string name="high_temperature_title">Temperature has reached the limit</string>
    <string name="supernight_mode_title">Super Night</string>
    <string name="time_laps_video_mode_guide">Speed up a video recorded over a period of time, thus quickly watching the continuous changes from begining to end</string>
    <string name="time_laps_video_mode_guide_info">Different speed suits different types of movement</string>
    <string name="time_laps_video_mode_title">Time-lapse</string>
    <string name="time_lapse_video_mode_title">TIME LAPSE</string>
    <string name="video_effect">Effects</string>
    <string name="video_filter">Filters</string>
    <string name="video_frame">Frames</string>
</resources>