<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="match_parent" android:layout_height="40.0dp" android:layout_marginTop="@dimen/guide_title_margin_top" android:layout_marginStart="@dimen/guide_title_margin_start" android:layout_marginEnd="@dimen/guide_title_margin_start">
        <TextView android:id="@id/mode_title" android:text="@string/time_laps_video_mode_title" style="@style/guide_title" />
        <ImageView android:layout_gravity="end" android:id="@id/img_exit_icon" android:layout_width="40.0dp" android:layout_height="40.0dp" android:src="@drawable/ic_guide_exit" />
    </FrameLayout>
    <FrameLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="324.0dp" android:layout_marginTop="16.0dp">
        <com.transsion.camera.app.ui.widget.AutoPlayTextureView android:layout_width="match_parent" android:layout_height="match_parent" app:video_id="@raw/time_lapse_guide_video_demo" />
        <com.transsion.camera.app.ui.widget.RoundedCornerCover android:layout_width="match_parent" android:layout_height="match_parent" />
    </FrameLayout>
    <TextView android:textSize="12.0dp" android:textColor="@color/guide_text_color" android:layout_gravity="bottom" android:background="@drawable/half_round_corner_background" android:padding="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/time_laps_video_mode_guide" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/round_corner_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp">
        <ImageView android:layout_width="wrap_content" android:layout_height="116.0dp" android:src="@drawable/ic_time_lapse_setting_demo_s" />
        <TextView android:textSize="14.0dp" android:textColor="@color/guide_text_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:text="@string/time_laps_video_mode_guide_info" android:layout_marginHorizontal="12.0dp" />
    </LinearLayout>
</LinearLayout>
