<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/high_temperature_bg_color" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="match_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/id_high_temperature_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/high_temperature_icon_margin_top" android:src="@drawable/ic_high_temperature_high" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/high_temperature_title_size" android:textColor="@color/high_temperature_title_color" android:id="@id/id_high_temperature_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/high_temperature_title_margin_top" android:text="@string/high_temperature_title" android:layout_below="@id/id_high_temperature_icon" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/high_temperature_sub_title_size" android:textColor="@color/high_temperature_sub_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/high_temperature_sub_title_margin_left" android:layout_marginTop="@dimen/high_temperature_sub_title_margin_top" android:layout_marginRight="@dimen/high_temperature_sub_title_margin_left" android:text="@string/high_temperature_sub_title" android:layout_below="@id/id_high_temperature_title" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/high_temperature_confirm_text_size" android:textColor="@color/high_temperature_title_color" android:id="@id/id_high_temperature_confirm" android:background="@drawable/high_temperature_confirm_bg" android:paddingLeft="@dimen/high_temperature_confirm_padding_left" android:paddingTop="@dimen/high_temperature_confirm_padding_top" android:paddingRight="@dimen/high_temperature_confirm_padding_left" android:paddingBottom="@dimen/high_temperature_confirm_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/high_temperature_confirm_margin_bottom" android:text="@string/high_temperature_confirm" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>
