<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="20.0dp" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="52.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gender_select_title" android:fontFamily="sans-serif-medium" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
    <TextView android:textSize="14.0sp" android:textColor="#a6000000" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/gender_select_content" android:fontFamily="sans-serif" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" />
    <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@id/gender_radio_group" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dp">
        <FrameLayout android:id="@id/male_panel" android:focusable="true" android:clickable="true" android:layout_width="148.0dp" android:layout_height="294.0dp">
            <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/gender_male_selector" />
            <ImageView android:id="@id/male_image" android:layout_width="match_parent" android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="match_parent" app:srcCompat="@drawable/ic_ar_select_gender_fg" />
        </FrameLayout>
        <FrameLayout android:id="@id/female_panel" android:focusable="true" android:clickable="true" android:layout_width="148.0dp" android:layout_height="294.0dp">
            <ImageView android:background="@drawable/gender_female_selector" android:layout_width="match_parent" android:layout_height="match_parent" />
            <ImageView android:id="@id/female_image" android:layout_width="match_parent" android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="match_parent" app:srcCompat="@drawable/ic_ar_select_gender_fg" />
        </FrameLayout>
    </RadioGroup>
    <View android:background="#26a1a1a1" android:layout_width="match_parent" android:layout_height="2.0px" android:layout_marginTop="12.0dp" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="52.0dp">
        <TextView android:textSize="14.0sp" android:textColor="#a6000000" android:gravity="center" android:id="@id/gender_select_cancel" android:background="@drawable/arcore_button_background" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/delete_avatar_cancel" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
        <TextView android:textSize="14.0sp" android:textColor="@color/primary_highlight_color" android:gravity="center" android:id="@id/gender_select_confirm" android:background="@drawable/arcore_button_background" android:clickable="true" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/gender_select_confirm" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
    </LinearLayout>
</LinearLayout>
