<?xml version="1.0" encoding="utf-8"?>
<com.transsion.camera.app.ui.widget.RotateLayout android:focusable="false" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="430.0dp" android:layout_height="430.0dp">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:layout_gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/gender_select_title" android:fontFamily="sans-serif-medium" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="14.0sp" android:textColor="#a6000000" android:gravity="center_horizontal" android:id="@id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/gender_select_content" android:fontFamily="sans-serif" android:layout_marginStart="20.0dp" android:layout_marginEnd="20.0dp" app:layout_constraintTop_toBottomOf="@id/title" />
        <FrameLayout android:id="@id/male_panel" android:focusable="true" android:clickable="true" android:layout_width="110.0dp" android:layout_height="230.0dp" android:layout_marginRight="31.0dp" app:layout_constraintBottom_toTopOf="@id/action_panel" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/female_panel" app:layout_constraintTop_toBottomOf="@id/description">
            <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/gender_male_selector" />
            <ImageView android:id="@id/male_image" android:layout_width="match_parent" android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="match_parent" app:srcCompat="@drawable/ic_ar_select_gender_fg" />
        </FrameLayout>
        <FrameLayout android:id="@id/female_panel" android:focusable="true" android:clickable="true" android:layout_width="110.0dp" android:layout_height="230.0dp" android:layout_marginStart="31.0dp" app:layout_constraintBottom_toBottomOf="@id/male_panel" app:layout_constraintLeft_toRightOf="@id/male_panel" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/male_panel">
            <ImageView android:background="@drawable/gender_female_selector" android:layout_width="match_parent" android:layout_height="match_parent" />
            <ImageView android:id="@id/female_image" android:layout_width="match_parent" android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatImageView android:layout_width="match_parent" android:layout_height="match_parent" app:srcCompat="@drawable/ic_ar_select_gender_fg" />
        </FrameLayout>
        <View android:background="#26a1a1a1" android:layout_width="328.0dp" android:layout_height="2.0px" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/action_panel" />
        <LinearLayout android:id="@id/action_panel" android:layout_width="match_parent" android:layout_height="52.0dp" android:layout_marginTop="27.0dp" app:layout_constraintBottom_toBottomOf="parent">
            <TextView android:textSize="14.0sp" android:textColor="#a6000000" android:gravity="center" android:id="@id/gender_select_cancel" android:background="@drawable/arcore_button_background" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/delete_avatar_cancel" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
            <TextView android:textSize="14.0sp" android:textColor="@color/primary_highlight_color" android:gravity="center" android:id="@id/gender_select_confirm" android:background="@drawable/arcore_button_background" android:clickable="true" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/gender_select_confirm" android:layout_weight="1.0" android:fontFamily="sans-serif-medium" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.transsion.camera.app.ui.widget.RotateLayout>
